--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,16 +18,16 @@
     "strictBindCallApply": true,
     "strictPropertyInitialization": true,
     "alwaysStrict": true,
-
+    "forceConsistentCasingInFileNames": true,
     "incremental": true,
     "plugins": [
       {
         "name": "next"
       }
     ],
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"],
+      "@/*": ["./src/*"],
       "@/types/*": ["types/*"],
       "@/components/*": ["components/*"],
       "@/features/*": ["features/*"],
